# miniPixels

./: .gitmodules  CMakeCache.txt  clion_guide.md  load.sh  record.md  test  tips.md
data/dateoutput/: 1737291591.pxl
data/decimaloutput/: 1737285614.pxl
data/input/: 1.tbl
data/long/: test_int.tbl
data/output/: 1737530621.pxl  1737530655.pxl  1737531443.pxl  1737531665.pxl  decimal.pxl  fulldec.pxl  long.pxl  testts.pxl  ts.pxl
data/test_decimal/: test_decimal.tbl
data/testdate/: input1.tbl
data/testtimestamp/: test_timestamp.tbl
pixels-cli/: CMakeCache.txt  CMakeLists.txt
pixels-cli/lib/load/: PixelsConsumer.cpp
pixels-common/include/physical/: Request.h
pixels-core/include/: PixelsWriterImpl.h
pixels-core/include/exception/: PixelsFileVersionInvalidException.h
pixels-core/include/utils/: DynamicIntArray.h
pixels-core/include/vector/: BinaryColumnVector.h  ColumnVector.h  DateColumnVector.h  DecimalColumnVector.h  TimestampColumnVector.h
pixels-core/include/writer/: DecimalColumnWriter.h  StringColumnWriter.h
pixels-core/lib/: TypeDescription.cpp
pixels-core/lib/encoding/: RunLenIntEncoder.cpp
pixels-core/lib/reader/: ColumnReaderBuilder.cpp  PixelsRecordReaderImpl.cpp
pixels-core/lib/vector/: BinaryColumnVector.cpp  ColumnVector.cpp  DateColumnVector.cpp  DecimalColumnVector.cpp  TimestampColumnVector.cpp
pixels-core/lib/writer/: ColumnWriterBuilder.cpp  DateColumnWriter.cpp  DecimalColumnWriter.cpp  IntegerColumnWriter.cpp  StringColumnWriter.cpp  TimestampColumnWriter.cpp
